--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
                 <!-- End: Search button-->
             </div>
 
-            <div id="slider"></div>
-
+            <div id="slider">
+                <div class="text-content">
+                    <h3 class="text-heading">Los Angeles</h3>
+                    <div class="text-description">
+                        <p>We had the best time playing at Venice Beach!</p>
+                    </div>
+                </div>
+            </div>
             <div id="content"></div>
 
             <div id="footer"></div>
