add: Row - column layout

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         exercitation ullamco laboris nisi ut aliquip ex ea
                         commodo consequat.
                     </p>
-                    <div class="members-list">
-                        <div class="member-item">
+                    <div class="row members-list">
+                        <div class="col col-third text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -80,7 +80,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="member-item">
+                        <div class="col col-third text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -88,7 +88,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="member-item">
+                        <div class="col col-third text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -120,8 +120,8 @@
                         </ul>
 
                         <!-- Places -->
-                        <div class="places-list">
-                            <div class="place-item">
+                        <div class="row places-list">
+                            <div class="col col-third">
                                 <img
                                     src="assets/img/places/newyork.jpg"
                                     alt="New York"
@@ -139,7 +139,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="place-item">
+                            <div class="col col-third">
                                 <img
                                     src="assets/img/places/paris.jpg"
                                     alt="Paris"
@@ -157,7 +157,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="place-item">
+                            <div class="col col-third">
                                 <img
                                     src="assets/img/places/sanfran.jpg"
                                     alt="San Francisco"
