--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="clear"></div>
                     </div>
                 </div>
 
@@ -175,7 +174,6 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="clear"></div>
                         </div>
                     </div>
                 </div>
@@ -184,6 +182,59 @@
                 <div class="content-section">
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
+                    <div class="row contact-content">
+                        <div class="col col-half contact-info">
+                            <p><i class="ti-location-pin"></i>Chicago, US</p>
+                            <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                            <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                        </div>
+                        <div class="col col-half contact-form">
+                            <form action="">
+                                <!-- Name & Email -->
+                                <div class="row">
+                                    <div class="col col-half">
+                                        <input
+                                            type="text"
+                                            name=""
+                                            id=""
+                                            class="form-control"
+                                            placeholder="Name"
+                                            required
+                                        />
+                                    </div>
+                                    <div class="col col-half">
+                                        <input
+                                            type="email"
+                                            name=""
+                                            id=""
+                                            class="form-control"
+                                            placeholder="Email"
+                                            required
+                                        />
+                                    </div>
+                                </div>
+
+                                <!-- Message -->
+                                <div class="row mt-8">
+                                    <div class="col col-full">
+                                        <input
+                                            type="text"
+                                            name=""
+                                            id=""
+                                            class="form-control"
+                                            placeholder="Message"
+                                            required
+                                        />
+                                    </div>
+                                </div>
+                                <input
+                                    type="submit"
+                                    value="SEND"
+                                    class="form-submit-btn mt-16"
+                                />
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="footer"></div>
