--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="place-buy-btn js-buy-ticket">
+                                    <button class="btn js-buy-ticket">
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -151,7 +151,7 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="place-buy-btn js-buy-ticket">
+                                    <button class="btn js-buy-ticket">
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -169,7 +169,7 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="place-buy-btn js-buy-ticket">
+                                    <button class="btn js-buy-ticket">
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
 
-                <!-- Contact section -->
+                <!-- Begin: Contact section -->
                 <div class="content-section">
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
@@ -230,14 +230,30 @@
                                 <input
                                     type="submit"
                                     value="SEND"
-                                    class="form-submit-btn mt-16"
+                                    class="btn pull-right mt-16"
                                 />
                             </form>
                         </div>
                     </div>
                 </div>
+                <!-- End: Contact section -->
+
+                <div class="map-section">
+                    <img src="assets/img/map.jpg" alt="" />
+                </div>
             </div>
-            <div id="footer"></div>
+
+            <div id="footer">
+                <div class="socials-list">
+                    <a href=""><i class="ti-facebook"></i></a>
+                    <a href=""><i class="ti-instagram"></i></a>
+                    <a href=""><i class="ti-youtube"></i></a>
+                    <a href=""><i class="ti-pinterest"></i></a>
+                    <a href=""><i class="ti-twitter"></i></a>
+                    <a href=""><i class="ti-linkedin"></i></a>
+                </div>
+                <p class="copyright">Powered by <a href="">w3.css</a></p>
+            </div>
         </div>
 
         <!-- Modal -->
