--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
             rel="stylesheet"
             href="./assets/fonts/themify-icons/themify-icons.css"
         />
-        <title>Document</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="https://www.w3schools.com/favicon.ico"
+        />
+        <title>The Band</title>
     </head>
     <body>
         <div id="main">
             <div id="header">
                 <!-- Begin: Nav -->
                 <ul id="nav">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Band</a></li>
-                    <li><a href="">Tour</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#band">Band</a></li>
+                    <li><a href="#tour">Tour</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li>
                         <a href="#"
                             >More <i class="nav-arrow-down ti-angle-down"></i>
                         </a>
                         <ul class="subnav">
-                            <li><a href="">Merchandise</a></li>
-                            <li><a href="">Extras</a></li>
-                            <li><a href="">Media</a></li>
+                            <li><a href="#">Merchandise</a></li>
+                            <li><a href="#">Extras</a></li>
+                            <li><a href="#">Media</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -52,7 +57,7 @@
 
             <div id="content">
                 <!-- About section -->
-                <div class="content-section">
+                <div id="band" class="content-section">
                     <h2 class="section-heading">THE BAND</h2>
                     <p class="section-sub-heading">We love music</p>
                     <p class="about-text">
@@ -100,7 +105,7 @@
                 </div>
 
                 <!-- Tour section -->
-                <div class="tour-section">
+                <div id="tour" class="tour-section">
                     <div class="content-section">
                         <h2 class="section-heading text-white">TOUR DATES</h2>
                         <p class="section-sub-heading text-white">
@@ -179,7 +184,7 @@
                 </div>
 
                 <!-- Begin: Contact section -->
-                <div class="content-section">
+                <div id="contact" class="content-section">
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
                     <div class="row contact-content">
