add: Mobile menu responsive

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             type="image/x-icon"
             href="https://www.w3schools.com/favicon.ico"
         />
+        <link rel="stylesheet" href="assets/css/responsive.css" />
         <title>The Band</title>
     </head>
     <body>
@@ -38,8 +39,11 @@
                 <!-- End: Nav -->
 
                 <!-- Begin: Search button-->
-                <div class="search-button">
+                <div class="search-btn">
                     <i class="search-icon ti-search"></i>
+                </div>
+                <div id="mobile-menu" class="mobile-menu-btn">
+                    <i class="menu-icon ti-menu"></i>
                 </div>
                 <!-- End: Search button-->
             </div>
@@ -341,6 +345,31 @@
             modalContainer.addEventListener("click", function (event) {
                 event.stopPropagation();
             });
+        </script>
+
+        <script>
+            var header = document.getElementById("header");
+            var mobileMenu = document.getElementById("mobile-menu");
+            var headerHeight = header.clientHeight;
+
+            // Đóng / mở mobile menu
+            mobileMenu.onclick = function () {
+                var isClosed = header.clientHeight === headerHeight;
+                if (isClosed) {
+                    header.style.height = "auto";
+                } else {
+                    header.style.height = null;
+                }
+            };
+
+            // Tự động đóng khi chọn menu
+            var menuItems = document.querySelectorAll("#nav li a[href*='#']");
+            for (var i = 0; i < menuItems.length; i++) {
+                var menuItem = menuItems[i];
+                menuItem.onclick = function () {
+                    header.style.height = null;
+                };
+            }
         </script>
     </body>
 </html>
