--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         commodo consequat.
                     </p>
                     <div class="row members-list">
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -90,7 +90,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -98,7 +98,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="col col-third text-center">
+                        <div class="col col-third s-col-full mt-16 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -130,7 +130,7 @@
 
                         <!-- Places -->
                         <div class="row places-list">
-                            <div class="col col-third">
+                            <div class="col col-third s-col-full mt-16">
                                 <img
                                     src="assets/img/places/newyork.jpg"
                                     alt="New York"
@@ -148,7 +148,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="col col-third">
+                            <div class="col col-third s-col-full mt-16">
                                 <img
                                     src="assets/img/places/paris.jpg"
                                     alt="Paris"
@@ -166,7 +166,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="col col-third">
+                            <div class="col col-third s-col-full mt-16">
                                 <img
                                     src="assets/img/places/sanfran.jpg"
                                     alt="San Francisco"
