--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         commodo consequat.
                     </p>
                     <div class="row members-list">
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -90,7 +90,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -98,7 +98,7 @@
                                 class="member-img"
                             />
                         </div>
-                        <div class="col col-third s-col-full mt-16 text-center">
+                        <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
                                 src="assets/img/band/bandmember.jpg"
@@ -143,7 +143,9 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="btn js-buy-ticket">
+                                    <button
+                                        class="btn s-full-width js-buy-ticket"
+                                    >
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -161,7 +163,9 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="btn js-buy-ticket">
+                                    <button
+                                        class="btn s-full-width js-buy-ticket"
+                                    >
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -179,7 +183,9 @@
                                         Praesent tincidunt sed tellus ut rutrum
                                         sed vitae justo.
                                     </p>
-                                    <button class="btn js-buy-ticket">
+                                    <button
+                                        class="btn s-full-width js-buy-ticket"
+                                    >
                                         Buy Tickets
                                     </button>
                                 </div>
@@ -193,16 +199,16 @@
                     <h2 class="section-heading">CONTACT</h2>
                     <p class="section-sub-heading">Fan? Drop a note!</p>
                     <div class="row contact-content">
-                        <div class="col col-half contact-info">
+                        <div class="col col-half s-col-full contact-info">
                             <p><i class="ti-location-pin"></i>Chicago, US</p>
                             <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                             <p><i class="ti-email"></i>Email: mail@mail.com</p>
                         </div>
-                        <div class="col col-half contact-form">
+                        <div class="col col-half s-col-full contact-form">
                             <form action="">
                                 <!-- Name & Email -->
                                 <div class="row">
-                                    <div class="col col-half">
+                                    <div class="col col-half s-col-full">
                                         <input
                                             type="text"
                                             name=""
@@ -212,7 +218,7 @@
                                             required
                                         />
                                     </div>
-                                    <div class="col col-half">
+                                    <div class="col col-half s-col-full s-mt-8">
                                         <input
                                             type="email"
                                             name=""
@@ -240,7 +246,7 @@
                                 <input
                                     type="submit"
                                     value="SEND"
-                                    class="btn pull-right mt-16"
+                                    class="btn pull-right mt-16 s-full-width"
                                 />
                             </form>
                         </div>
