Run and fix bug on mobile

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <input
                                     type="submit"
                                     value="SEND"
-                                    class="btn pull-right mt-16 s-full-width"
+                                    class="contact-submit-btn btn pull-right mt-16 s-full-width"
                                 />
                             </form>
                         </div>
