--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
-                                src="assets/img/band/bandmember.jpg"
+                                src="./assets/img/band/bandmember.jpg"
                                 alt=""
                                 class="member-img"
                             />
@@ -93,7 +93,7 @@
                         <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
-                                src="assets/img/band/bandmember.jpg"
+                                src="./assets/img/band/bandmember.jpg"
                                 alt=""
                                 class="member-img"
                             />
@@ -101,7 +101,7 @@
                         <div class="col col-third s-col-full mt-32 text-center">
                             <p class="member-name">Name</p>
                             <img
-                                src="assets/img/band/bandmember.jpg"
+                                src="./assets/img/band/bandmember.jpg"
                                 alt=""
                                 class="member-img"
                             />
